@@ -100,19 +100,19 @@ public class MediaDefaultTest extends AbstractRuntimeTest
 		assertContains(item.TYPE.search(item.file.isNotNull()));
 		{
 			final Date before = new Date();
-			item.setFile(stream(data4), "fileMajor/fileMinor");
+			item.setFile(stream(data4), "file-major/file-minor");
 			final Date after = new Date();
 			assertStreamClosed();
-			assertContent(data4, before, after, "fileMajor/fileMinor", "");
+			assertContent(data4, before, after, "file-major/file-minor", "");
 		}
 		assertContains(item.TYPE.search(item.file.isNull()));
 		assertContains(item, item.TYPE.search(item.file.isNotNull()));
 		{
 			final Date before = new Date();
-			item.setFile(stream(data6), "fileMajor2/fileMinor2");
+			item.setFile(stream(data6), "file-major2/file-minor2");
 			final Date after = new Date();
 			assertStreamClosed();
-			assertContent(data6, before, after, "fileMajor2/fileMinor2", "");
+			assertContent(data6, before, after, "file-major2/file-minor2", "");
 
 			try
 			{
@@ -126,7 +126,7 @@ public class MediaDefaultTest extends AbstractRuntimeTest
 				assertEquals(item, e.getItem());
 				assertEquals("illegalContentType", e.getContentType());
 				assertEquals("illegal content type 'illegalContentType' on " + item + " for MediaItem.file, allowed is '*/*\' only.", e.getMessage());
-				assertContent(data6, before, after, "fileMajor2/fileMinor2", "");
+				assertContent(data6, before, after, "file-major2/file-minor2", "");
 			}
 		}
 		assertExtension("image/jpeg", ".jpg");
@@ -140,48 +140,48 @@ public class MediaDefaultTest extends AbstractRuntimeTest
 		if(!oracle)
 		{
 			final Date before = new Date();
-			item.setFile(stream(data0), "emptyMajor/emptyMinor");
+			item.setFile(stream(data0), "empty-major/empty-minor");
 			final Date after = new Date();
 			assertStreamClosed();
-			assertContent(data0, before, after, "emptyMajor/emptyMinor", "");
+			assertContent(data0, before, after, "empty-major/empty-minor", "");
 		}
 		item.setFile((InputStream)null, null);
 		assertNull();
 		{
 			final Date before = new Date();
-			item.setFile(file(data8), "emptyMajor/emptyMinor");
+			item.setFile(file(data8), "empty-major/empty-minor");
 			final Date after = new Date();
-			assertContent(data8, before, after, "emptyMajor/emptyMinor", "");
+			assertContent(data8, before, after, "empty-major/empty-minor", "");
 		}
 		item.setFile((File)null, null);
 		assertNull();
 		{
 			final Date before = new Date();
-			item.setFile(data8, "emptyMajor/emptyMinor");
+			item.setFile(data8, "empty-major/empty-minor");
 			final Date after = new Date();
-			assertContent(data8, before, after, "emptyMajor/emptyMinor", "");
+			assertContent(data8, before, after, "empty-major/empty-minor", "");
 		}
 		item.setFile((byte[])null, null);
 		assertNull();
 		{
 			final Date before = new Date();
-			item.setFile(Media.toValue(data8, "emptyMajor/emptyMinor"));
+			item.setFile(Media.toValue(data8, "empty-major/empty-minor"));
 			final Date after = new Date();
-			assertContent(data8, before, after, "emptyMajor/emptyMinor", "");
+			assertContent(data8, before, after, "empty-major/empty-minor", "");
 		}
 		item.setFile((Media.Value)null);
 		assertNull();
 		{
 			// test length violation
 			final Date before = new Date();
-			item.setFile(data20, "emptyMajor/emptyMinor");
+			item.setFile(data20, "empty-major/empty-minor");
 			final Date after = new Date();
-			assertContent(data20, before, after, "emptyMajor/emptyMinor", "");
+			assertContent(data20, before, after, "empty-major/empty-minor", "");
 			
 			// byte[]
 			try
 			{
-				item.setFile(data21, "emptyMajorLong/emptyMinorLong");
+				item.setFile(data21, "empty-major-long/empty-minor-long");
 				fail();
 			}
 			catch(DataLengthViolationException e)
@@ -193,10 +193,10 @@ public class MediaDefaultTest extends AbstractRuntimeTest
 				assertEquals(true, e.isLengthExact());
 				assertEquals("length violation on " + item + ", 21 bytes is too long for " + body, e.getMessage());
 			}
-			assertContent(data20, before, after, "emptyMajor/emptyMinor", "");
+			assertContent(data20, before, after, "empty-major/empty-minor", "");
 			try
 			{
-				new MediaItem(Media.toValue(data21, "emptyMajorLong/emptyMinorLong"));
+				new MediaItem(Media.toValue(data21, "empty-major-long/empty-minor-long"));
 				fail();
 			}
 			catch(DataLengthViolationException e)
@@ -212,7 +212,7 @@ public class MediaDefaultTest extends AbstractRuntimeTest
 			// file
 			try
 			{
-				item.setFile(file(data21), "emptyMajorLong/emptyMinorLong");
+				item.setFile(file(data21), "empty-major-long/empty-minor-long");
 				fail();
 			}
 			catch(DataLengthViolationException e)
@@ -224,10 +224,10 @@ public class MediaDefaultTest extends AbstractRuntimeTest
 				assertEquals(true, e.isLengthExact());
 				assertEquals("length violation on " + item + ", 21 bytes is too long for " + body, e.getMessage());
 			}
-			assertContent(data20, before, after, "emptyMajor/emptyMinor", "");
+			assertContent(data20, before, after, "empty-major/empty-minor", "");
 			try
 			{
-				new MediaItem(Media.toValue(file(data21), "emptyMajorLong/emptyMinorLong"));
+				new MediaItem(Media.toValue(file(data21), "empty-major-long/empty-minor-long"));
 				fail();
 			}
 			catch(DataLengthViolationException e)
@@ -243,7 +243,7 @@ public class MediaDefaultTest extends AbstractRuntimeTest
 			// stream
 			try
 			{
-				item.setFile(stream(data21), "emptyMajorLong/emptyMinorLong");
+				item.setFile(stream(data21), "empty-major-long/empty-minor-long");
 				fail();
 			}
 			catch(DataLengthViolationException e)
@@ -256,10 +256,10 @@ public class MediaDefaultTest extends AbstractRuntimeTest
 				assertEquals("length violation on " + item + ", 21 bytes or more is too long for " + body, e.getMessage());
 			}
 			assertStreamClosed();
-			//assertContent(data20, before, after, "emptyMajorLong/emptyMinorLong", ".emptyMajorLong.emptyMinorLong"); TODO
+			//assertContent(data20, before, after, "empty-major-long/empty-minor-long", ".empty-major-long.empty-minor-long"); TODO
 			try
 			{
-				new MediaItem(Media.toValue(stream(data21), "emptyMajorLong/emptyMinorLong"));
+				new MediaItem(Media.toValue(stream(data21), "empty-major-long/empty-minor-long"));
 				fail();
 			}
 			catch(DataLengthViolationException e)
