@@ -7,6 +7,9 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* Media with default Content-Type or major Content-Type do restrict the
+	CharSet of the StringField storing the Content-Type. You may need to adjust
+	the persistent schema (adding new check constraints) and/or adjust your data.
 * add pattern Range
 * Editor provides LOGIN_PATH_INFO
 * Editor provides isBordersEnabled()
